--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
-    <title>React App</title>
+    <title>Adair Juneo | Portfólio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
